[gd_scene load_steps=5 format=3 uid="uid://ydvjvx8qj1rf"]

[ext_resource type="StyleBox" uid="uid://cgxwrhnuyhe72" path="res://Styles/decision_panel_style.tres" id="1_ou8u6"]
[ext_resource type="Script" uid="uid://ccp3o61ytsdgn" path="res://Scripts/constraint.gd" id="2_b0mjq"]
[ext_resource type="Texture2D" uid="uid://4g6mnvloaa3" path="res://Textures/Boxes96.png" id="3_e78l3"]
[ext_resource type="PackedScene" uid="uid://5ii4odjs77y8" path="res://Scenes/delete_button.tscn" id="4_e78l3"]

[node name="Constraint" type="PanelContainer"]
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_ou8u6")
script = ExtResource("2_b0mjq")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="Content" type="HBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectedCheck" type="CheckBox" parent="Margin/Content"]
visible = false
layout_mode = 2
focus_mode = 0

[node name="NameLabel" type="Label" parent="Margin/Content"]
layout_mode = 2
size_flags_horizontal = 3
text = "Constraint name"

[node name="TypeTexture" type="TextureRect" parent="Margin/Content"]
layout_mode = 2
texture = ExtResource("3_e78l3")
stretch_mode = 2

[node name="Delete" parent="Margin/Content" instance=ExtResource("4_e78l3")]
layout_mode = 2

[connection signal="toggled" from="Margin/Content/SelectedCheck" to="." method="_on_selected_check_toggled"]
[connection signal="pressed" from="Margin/Content/Delete" to="." method="_on_delete_pressed"]
